[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = {version="0.4", features = ["serde"]}
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
axum = { version = "0.7", features = ["json", "tokio"] }
axum-template = "2.4.0"
askama = "0.12.1"
